# SuperGenius

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  Readme.md  _r_e_a_d_m_e_8md.html  adapter__errors_8cpp.html  adapter__errors_8cpp.js  adapter__errors_8cpp__incl.map  adapter__errors_8cpp__incl.md5  adapter__errors_8cpp_source.html  adapter__errors_8hpp.html  adapter__errors_8hpp__incl.map  adapter__errors_8hpp__incl.md5  adapter__errors_8hpp_source.html  annotated.html  annotated_dup.js  api_2service_2system_2requests_2chain_8hpp.html  api_2service_2system_2requests_2chain_8hpp.js  api_2service_2system_2requests_2chain_8hpp__dep__incl.map  api_2service_2system_2requests_2chain_8hpp__dep__incl.md5  api_2service_2system_2requests_2chain_8hpp__incl.map  api_2service_2system_2requests_2chain_8hpp__incl.md5  api_2service_2system_2requests_2chain_8hpp_source.html  api_2service_2system_2requests_2version_8hpp.html  api_2service_2system_2requests_2version_8hpp.js  api_2service_2system_2requests_2version_8hpp__dep__incl.map  api_2service_2system_2requests_2version_8hpp__dep__incl.md5  api_2service_2system_2requests_2version_8hpp__incl.map  api_2service_2system_2requests_2version_8hpp__incl.md5  api_2service_2system_2requests_2version_8hpp_source.html  api_2transport_2error_8cpp.html  api_2transport_2error_8cpp.js  api_2transport_2error_8cpp__incl.map  (+7543 more)
app/: CMakeLists.txt  SuperGeniusDemoApp.cpp  SuperGeniusDemoApp.hpp  runner.cpp
app/integration/: ApiServiceFactory.hpp  AppConfigurationFactory.hpp  AppStateManagerFactory.hpp  AuthorApiFactory.hpp  AuthorityManagerFactory.hpp  AuthorityUpdateObserverFactory.hpp  BlockBuilderManager.hpp  BlockExecutorFactory.hpp  BlockHeaderRepositoryFactory.hpp  BlockStorageFactory.hpp  BlockTreeFactory.hpp  BlockValidatorFactory.hpp  BufferStorageFactory.hpp  CComponentFactory.cpp  CComponentFactory.hpp  ChainApiFactory.hpp  ConfigurationStorageFactory.hpp  ED25519KeyPairFactory.hpp  ED25519ProviderFactory.hpp  EnvironmentFactory.hpp  EpochStorageFactory.hpp  ExtrinsicGossiperFactory.hpp  ExtrinsicObserverFactory.hpp  FinalityFactory.hpp  HasherFactory.hpp  IComponent.hpp  IComponentFactory.hpp  JRpcProcessorFactory.hpp  JRpcServerFactory.hpp  KeyStorageFactory.hpp  ListenerFactory.hpp  OwnPeerInfoFactory.hpp  PoolModeratorFactory.hpp  ProductionConfigurationFactory.hpp  ProductionFactory.hpp  ProductionLotteryFactory.hpp  ProductionSynchronizerFactory.hpp  ProposerFactory.hpp  RouterFactory.hpp  RpcContextFactory.hpp  (+14 more)
example/: CMakeLists.txt  processing_app.cpp
example/AsyncFile/: CMakeLists.txt  MNNExample.cpp
example/BpeTokenizer/: BpeEncode.cpp  BpeTokenizer.cpp  BpeTokenizer.hpp  CMakeLists.txt  GateWeights.cpp  GateWeights.hpp  LayerProcessor.cpp  LayerProcessor.hpp  MoeModelRunner.cpp  MoeModelRunner.hpp  MultiExpert.cpp  MultiExpert.hpp  SplitEmbedding.cpp  SplitEmbedding.hpp  SplitLMHead.cpp  SplitLMHead.hpp  TestEmbedding.cpp  TestExpert.cpp  Utility.cpp  Utility.hpp  jsonparser.cpp  jsonparser.hpp  vocab.json
example/account_handling/: AccountHandling.cpp  AccountHelper.cpp  AccountHelper.hpp  CMakeLists.txt  TransactionManager.hpp
example/crdt_globaldb/: CMakeLists.txt  globaldb_app.cpp
example/echo_client/: CMakeLists.txt  echo_client.cpp
example/evm_messaging_dapp/: CMakeLists.txt  evm_messaging_dapp.cpp  evm_messaging_dapp.hpp
example/graphsync_app/: CMakeLists.txt  graphsync_acceptance_common.cpp  graphsync_acceptance_common.hpp  graphsync_app.cpp
example/ipfs_client/: CMakeLists.txt  ipfs.cpp  ipfs_dht.cpp  ipfs_dht.hpp  ping_session.cpp  ping_session.hpp
example/ipfs_client2/: CMakeLists.txt  testipfs.cpp
example/ipfs_pubsub/: CMakeLists.txt  ipfs_pubsub.cpp
example/kompute_manager/: CMakeLists.txt  array_multiplication.comp  array_multiplication.comp.spv  array_multiplication_spirv.bat  infura_ipfs.cpp  infura_ipfs.hpp  kompute_dapp.cpp  kompute_dapp_processor.cpp  kompute_manager.cpp  kompute_manager.hpp  main.cpp  root_certificates.hpp
example/mnn_chunkprocess/: CMakeLists.txt  multiPose.cpp  segment.mnn
example/node_test/: CMakeLists.txt  NodeExample.cpp  settings.json
example/processing_dapp/: CMakeLists.txt  processing_dapp.cpp  processing_dapp_processor.cpp  processing_subtask_result_storage.cpp  processing_subtask_result_storage_impl.hpp
example/processing_json/: CMakeLists.txt  processing_json.cpp
example/processing_mnn/: CMakeLists.txt  mnn_posenet.cpp  mnn_posenet.hpp  processing_mnn.cpp  processing_mnn.hpp  processing_mnn_p.cpp  processing_task_queue_impl.hpp
example/processing_room/: CMakeLists.txt  processing_app.cpp
node/: CMakeLists.txt  app_delegate.cpp  app_delegate.hpp  cli.cpp  cli.hpp  common.cpp  common.hpp  daemonconfig.hpp  entry.cpp  ipfs_lite_store.cpp  ipfs_lite_store.h  ipfs_lite_store.hpp  logging.cpp  logging.hpp  network.cpp  network.hpp  node.cpp  node.hpp  node_config.cpp  node_config.hpp  node_rpc_config.cpp  node_rpc_config.hpp  wallet.cpp  wallet.hpp
src/: CMakeLists.txt
src/account/: AccountManager.cpp  AccountManager.hpp  AccountMessenger.cpp  AccountMessenger.hpp  AccountPubSub.hpp  CMakeLists.txt  EscrowReleaseTransaction.cpp  EscrowReleaseTransaction.hpp  EscrowTransaction.cpp  EscrowTransaction.hpp  GeniusAccount.cpp  GeniusAccount.hpp  GeniusNode.cpp  GeniusNode.cpp.orig  GeniusNode.hpp  GeniusUTXO.hpp  IGeniusTransactions.cpp  IGeniusTransactions.hpp  IMigrationStep.hpp  Migration0_2_0To1_0_0.cpp  Migration0_2_0To1_0_0.hpp  MigrationManager.cpp  MigrationManager.hpp  MintTransaction.cpp  MintTransaction.hpp  ProcessingTransaction.cpp  ProcessingTransaction.hpp  TokenAmount.cpp  TokenAmount.hpp  TokenID.hpp  TransactionManager.cpp  TransactionManager.hpp  TransferTransaction.cpp  TransferTransaction.hpp  UTXOTxParameters.cpp  UTXOTxParameters.hpp
src/api/: CMakeLists.txt
src/application/: CMakeLists.txt  app_config.hpp  app_state_manager.hpp  configuration_storage.hpp  genesis_raw_config.hpp  key_storage.hpp  sgns_application.hpp
src/authorship/: CMakeLists.txt  (+3 more)
(+1270 files in other folders)
