add_subdirectory(processing_room)
add_subdirectory(processing_dapp)
add_subdirectory(graphsync_app)
add_subdirectory(echo_client)
add_subdirectory(crdt_globaldb)
add_subdirectory(ipfs_client)
add_subdirectory(ipfs_pubsub)
add_subdirectory(account_handling)
add_subdirectory(processing_mnn)
add_subdirectory(node_test)
add_subdirectory(AsyncFile)
add_subdirectory(mnn_chunkprocess)
add_subdirectory(processing_json)
add_subdirectory(evm_messaging_dapp)