#add_subdirectory(application)
add_subdirectory(api)
add_subdirectory(account)
add_subdirectory(base)
add_subdirectory(blockchain)
add_subdirectory(clock)
add_subdirectory(outcome)
add_subdirectory(scale)
add_subdirectory(primitives)
add_subdirectory(network)
add_subdirectory(crypto)
add_subdirectory(storage)
add_subdirectory(crdt)
add_subdirectory(transaction_pool)
add_subdirectory(verification)
add_subdirectory(authorship)
#add_subdirectory(injector)
add_subdirectory(runtime)
add_subdirectory(extensions)
add_subdirectory(subscription)
add_subdirectory(processing)
add_subdirectory(local_secure_storage)